<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--ToureNPlaner-->
    <string name="app_name">ToureNPlaner</string>

    <!--serverscreen-->
    <string name="enter_server">Enter a server address</string>
    <string name="add_server">Add server</string>

    <!-- certificatescreen -->
    <string name="add_certificate">Add certificate</string>
    <string name="add_certificates">Manage certificates</string>

    <!--loginscreen-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="save_credentials">Save credentials</string>

    <!--algorithmscreen-->
    <string name="billing">History</string>

    <!-- billingscreen -->
    <string name="requestid">request ID</string>
    <string name="algorithmn">Algorithm</string>
    <string name="cost">Cost</string>
    <string name="requestdate">Request date</string>
    <string name="duration">Duration</string>
    <string name="status">Status</string>
    <string name="tour">Tour</string>
    <string name="load_request">Load</string>
    <string name="milliseconds">Milliseconds</string>
    <string name="euro">Euro</string>

    <!--mapscreen-->
    <string name="search">Search</string>
    <string name="gps_to_start">Set gps-location as starting point?</string>

    <!--nodelist_menu-->
    <string name="reverse_order">Reverse order</string>
    <string name="map_file_error">Mapfile is not valid. Falling back.</string>
    <string name="waypoints">Waypoints</string>
    <string name="traveldistance">Distance</string>
    <string name="travel_time">Travel time</string>
    <string name="message">Message</string>
    <string name="meter">meter</string>
    <string name="kilometer">kilometer</string>
    <string name="meter_short">m</string>
    <string name="kilometer_short">km</string>
    <string name="minute_short">min</string>
    <string name="amount_of_points">amount of points</string>

    <!--mapscreen_preferences-->
    <string name="map_preferences">Map</string>
    <string name="input_tile_server">Enter tile server</string>
    <string name="tile_server">Tile server</string>
    <string name="offline_map_location">Offline map location</string>
    <string name="input_offline_map_location">Enter offline map location</string>
    <string name="is_instant_request">Instant Request</string>
    <string name="map_generator">Map</string>
    <string name="input_map_generator">Choose a Map</string>
    <string name="input_instant">Instant Request</string>

    <string name="way_desc">Way description</string>
    <!--menu-->
    <string name="stats">Statistics</string>
    <string name="calculate">Calculate</string>
    <string name="tbt">Turn by Turn navigation</string>
    <string name="your_location">Your location</string>
    <string name="settings">Settings</string>
    <string name="saveroute">Save Current Route</string>
    <string name="loadroute">View Stored Routes</string>

    <!-- editnodescreen -->
    <string name="constraints">Constraints</string>
    <string name="name">Name</string>

    <!-- constraint_screens -->
    <string name="select_a_value">Select a value</string>
    <!--various-->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="connecting">Connecting</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="search_hint">Search address</string>
    <string name="mapscreen_hint">Hold your finger on the screen to place a marker</string>
    <string name="login_dialog_title">Logging in</string>
    <string name="clear">Clear</string>
    <string name="empty_node_list">No nodes</string>
    <string name="empty_server_list">No servers</string>
    <string name="time">Time</string>
    <string name="osm_copyright">© OpenStreetMap contributors, CC BY-SA</string>
    <string name="mapquest_copyright">Tiles Courtesy of MapQuest\n© OpenStreetMap contributors, CC BY-SA</string>
    <string name="seconds_short">s</string>
    <string name="about">About</string>
    <string name="about_text">A study project of the University of
        Stuttgart.\n\nUses:\nActionBarSherlock\nhttp://actionbarsherlock.com\nMapsforge\nhttp://code.google.com/p/mapsforge\nJackson\nhttp://wiki.fasterxml.com/JacksonHome
    </string>
    <string name="algorithm_constraint_notset">Please set all constraints in the constraints menu.</string>
    <string name="point_constraints_notset">Not all constraints for all nodes are set.</string>
    <string name="points_notset">Not enough or too many points set.</string>
    <string name="sp_description">Finds the fastest way between to points.</string>
    <string name="tsp_description">Finds the fastest way to travel to all points.</string>
    <string name="csp_description">Finds the fastest way with a specific maximum of height meters.</string>
    <string name="get_tbt">Get streetnames</string>
    <string name="routeinfo">Route info</string>
    <string name="tbtip">Turn By Turn Server</string>
    <string name="tbtpref">Turn By Turn Preferences</string>
    <string name="needtargetmarker">Can\'t get Turn by Turn directions without at least one target marker</string>
    <string name="routeinprogress">Route retrieval in progress, try again when it is completed</string>
    <string name="togglecompass">Toggle Compass</string>
    <string name="exportgpxroute">Export Route as GPX</string>
    <string name="tbtlocale">Turn by Turn Navigation Language</string>
</resources>
