<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/mapscreen_preferences">
        <ListPreference
                android:key="map_generator"
                android:title="@string/map_generator"
                android:dialogTitle="@string/input_map_generator"/>
        <EditTextPreference
                android:key="offline_map_location"
                android:title="@string/offline_map_location"
                android:dialogTitle="@string/input_offline_map_location"/>
        <EditTextPreference
                android:key="tile_server"
                android:title="@string/tile_server"
                android:dialogTitle="@string/input_tile_server"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="Others">
        <ListPreference
                android:key="instant_request"
                android:title="@string/is_instant_request"
                android:dialogTitle="@string/input_instant"/>
        />
    </PreferenceCategory>
</PreferenceScreen>
