<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/calculate"
          android:icon="@drawable/calculate"
          android:title="@string/calculate"/>
    <item android:id="@+id/search"
          android:icon="@drawable/action_search"
          app:actionLayout="@layout/collapsible_searchfield"
          app:showAsAction="always|collapseActionView"
          android:title="@string/search"/>
    <item android:id="@+id/nodelist"
          android:title="@string/info"/>
    <item android:id="@+id/algorithm_constraints"
          android:title="@string/constraints"/>
    <item android:id="@+id/gps"
          android:icon="@drawable/location"
          app:showAsAction="ifRoom"
          android:checkable="true"
          android:title="@string/your_location"/>
    <item android:id="@+id/reset"
          app:showAsAction="ifRoom"
          android:icon="@drawable/content_discard"
          android:title="@string/clear"/>
    <item android:id="@+id/settings"
          android:title="@string/settings"/>
</menu>
